<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joseph.testing.MainActivity">

    <EditText
        android:id="@+id/etFirstNumber"
        android:hint="firstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etSecondNumber"
        android:hint="secondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="get result"
        android:id="@+id/btnAdd"
        android:onClick="Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="send result"
        android:id="@+id/btnSendResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
